--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
